add pomodoro timer and productivity time

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./assets/index.css">
 </head>
 <body>
+    <main>
+        <section class="timer-container">
+            <div class="timer">0:0</div>
+            <button class="btn start">Start</button>
+            <button class="btn again">Again</button>
+            <button class="btn stop">Stop</button>
+        </section>
+        <section>
+            <article class="productivity">
+                <h2>Productivity Time</h2>
+                <div class="productivity-time">
+                </div>
+                <p class="total">Total:</p>
+            </article>
+        </section>
+    </main>
 
     <script src="./assets/index.js"></script>
 </body>
