change to BEM methodology

--- a/src/index.html
+++ b/src/index.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Plus</title>
-    <link rel="stylesheet" href="./assets/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <main>
-        <section class="timer-container">
-            <div class="timer">0:0</div>
-            <button class="btn start">Start</button>
-            <button class="btn again">Again</button>
-            <button class="btn stop">Stop</button>
+        <section class="container__timer">
+            <div class="timer__counter">0:0</div>
+            <button class="timer__btn timer__btn--start">Start</button>
+            <button class="timer__btn timer__btn--again">Again</button>
+            <button class="timer__btn timer__btn--stop">Stop</button>
         </section>
         <section>
             <article class="productivity">
                 <h2>Productivity Time</h2>
-                <div class="productivity-time">
-                </div>
-                <p class="total">Total:</p>
+                <div class="productivity__time"></div>
+                <p class="productivity__total">Total:</p>
             </article>
         </section>
     </main>
 
-    <script src="./assets/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
