add better code structure and change again and stop words

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
         <section class="container__timer">
             <div class="timer__counter">0:0</div>
             <button class="timer__btn timer__btn--start">Start</button>
-            <button class="timer__btn timer__btn--again">Again</button>
-            <button class="timer__btn timer__btn--stop">Stop</button>
+            <button class="timer__btn timer__btn--again">Finish</button>
+            <button class="timer__btn timer__btn--stop">Pause</button>
         </section>
         <section>
             <article class="productivity">
                 <h2>Productivity Time</h2>
                 <div class="productivity__time"></div>
-                <p class="productivity__total">Total:</p>
+                <p class="productivity__total">Total: 0:0</p>
             </article>
         </section>
     </main>
