add styles at prod time and change colors

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
             <button class="timer__btn timer__btn--stop">Pause</button>
             <button class="timer__btn timer__btn--again">Finish</button>
         </section>
-        <section>
-            <article class="productivity">
-                <h2>Productivity Time</h2>
+        <section class="container__productivity">
+            <article class="productivity__info">
+                <h2 class="productivity__title">Productivity Time</h2>
                 <div class="productivity__time"></div>
                 <p class="productivity__total">Total: 0:0</p>
             </article>
