add disabled attr in buttons

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
         <section class="container__timer">
             <div class="timer__counter">00:00</div>
             <button class="timer__btn timer__btn--start">Start</button>
-            <button class="timer__btn timer__btn--stop">Pause</button>
-            <button class="timer__btn timer__btn--again">Finish</button>
+            <button class="timer__btn timer__btn--stop" disabled>Pause</button>
+            <button class="timer__btn timer__btn--again" disabled>Finish</button>
         </section>
         <section class="container__productivity">
             <article class="productivity__info">
