refactor toggle function in buttons

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <main>
         <section class="container__timer">
             <div class="timer__counter">00:00</div>
-            <button class="timer__btn timer__btn--start">Start</button>
-            <button class="timer__btn timer__btn--stop" disabled>Pause</button>
-            <button class="timer__btn timer__btn--again" disabled>Finish</button>
+            <button id="start" class="timer__btn">Start</button>
+            <button id="pause" class="timer__btn timer__btn--disabled" disabled>Pause</button>
+            <button id="finish" class="timer__btn timer__btn--disabled" disabled>Finish</button>
         </section>
         <section class="container__productivity">
             <article class="productivity__info">
