--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <title>Pomodoro Plus</title>
 </head>
 <body>
+    <header>
+        <span class="header__title">POMODORO PLUS</span>
+    </header>
     <main>
         <section class="container__timer">
             <div class="timer__counter">00:00</div>
