--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
             <button id="pause" class="timer__btn timer__btn--disabled" disabled>Pause</button>
             <button id="finish" class="timer__btn timer__btn--disabled" disabled>Finish</button>
         </section>
-        <section class="container__productivity">
-            <article class="productivity__info">
-                <h2 class="productivity__title">Productivity Time</h2>
-                <div class="productivity__time"></div>
-                <p class="productivity__total">Total: 0:0</p>
+        <section class="container__focus">
+            <article class="focus__info">
+                <h2 class="focus__title">Focus Time</h2>
+                <div class="focus__time"></div>
+                <p class="focus__total">Total: 0:0</p>
             </article>
         </section>
     </main>
