add time to rest legend

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <main>
         <section class="container__timer">
             <div class="timer__counter">00:00</div>
+            <p class="timer__legend">Time to rest!</p>
             <button id="start" class="timer__btn">Start</button>
             <button id="pause" class="timer__btn timer__btn--disabled" disabled>Pause</button>
             <button id="finish" class="timer__btn timer__btn--disabled" disabled>Finish</button>
