add clean time button

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,10 @@
             <article class="focus__info">
                 <h2 class="focus__title">Focus Time</h2>
                 <div class="focus__time"></div>
-                <p class="focus__total">Total: 00:00</p>
+                <div class="focus__footer">
+                    <button class="focus__btn">Clean Time</button>
+                    <p class="focus__total">Total: 00:00</p>
+                </div>
             </article>
         </section>
     </main>
