--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
             <button id="start" class="timer__btn">Start</button>
             <button id="pause" class="timer__btn timer__btn--disabled" disabled>Pause</button>
             <button id="finish" class="timer__btn timer__btn--disabled" disabled>Finish</button>
+            <svg class="timer__scroll-down" width="30" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 13l-7 7-7-7m14-8l-7 7-7-7"></path></svg>
         </section>
         <section class="container__focus">
             <article class="focus__info">
