--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,11 @@
     </header>
     <main>
         <section class="container__timer">
-            <div class="tomer__toggle">
-                <input type="checkbox" id="toggle--sound">
+            <div class="timer__toggle">
+                <input type="checkbox" class="toggle--sound" id="toggle--sound">
                 <label for="toggle--sound"></label>
+                <svg class="timer__volume-on" width="25" height="25" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.536 8.464a5 5 0 010 7.072m2.828-9.9a9 9 0 010 12.728M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z"></path></svg>
+                <svg class="timer__volume-off" width="25" height="25" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" clip-rule="evenodd"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2"></path></svg>
             </div>
             <div class="timer__counter">00:00</div>
             <p class="timer__legend">Time to rest!</p>
